--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ section.active-class .landing__container::after {
 }
 
 /*collapsible*/
-/* .collapsible {
+.collapsible {
     background-color: #777;
     color: white;
     cursor: pointer;
@@ -254,8 +254,8 @@ section.active-class .landing__container::after {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-    background-color: #f1f1f1;
-  } */
+    /* background-color: #f1f1f1;  */
+  }
 /* Section Active Styles Keyframe Animations */
 @keyframes rotate {
 	from {
